--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
+  border: 1px solid black;
 }
 
 html {
@@ -97,6 +98,12 @@ p {
   overflow: hidden;
 }
 
+.header-work-with-us {
+  background-image: url(../img/header-trabaja-con-nosotros.webp);
+  background-size: cover;
+  background-position: center;
+}
+
 .header--margin {
   margin-bottom: 6rem;
   min-height: 42rem;
@@ -188,6 +195,12 @@ p {
   font-size: 12px;
 }
 
+.header-quienes-somos {
+  background-image: url(../img/header-quienes-somos.webp);
+  background-position: center;
+  background-size: cover;
+}
+
 .who-we-are p {
   font-size: 15px;
   margin: 2rem 1.5rem;
@@ -260,10 +273,12 @@ p {
   opacity: 0.8;
   background-color: #F55000;
   margin-top: 1rem;
+  transition: 0.2s;
 }
 .form div input:hover, .form div select:hover, .form div textarea:hover {
-  transition: 0.2s;
-  transform: scale(1.3);
+  color: #f55000;
+  background-color: #fff;
+  border: 1px solid #f55000;
   opacity: 1;
 }
 
@@ -305,10 +320,12 @@ p {
   background-color: #F55000;
   margin-top: 1rem;
   width: 20rem;
+  transition: 0.2s;
 }
 #submit:hover {
-  transition: 0.2s;
-  transform: scale(1.2);
+  color: #f55000;
+  background-color: #fff;
+  border: 1px solid #f55000;
   opacity: 1;
 }
 
@@ -347,17 +364,47 @@ p {
   line-height: 4rem;
   text-align: center;
 }
+.newsletter form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .newsletter form input, .newsletter form .form select, .form .newsletter form select, .newsletter form .form textarea, .form .newsletter form textarea {
   background-color: #ffffff;
+  border: none;
+  border-radius: 10px;
   text-align: center;
   font-weight: 700;
   width: 25rem;
-  height: 3rem;
+  height: 4rem;
+}
+.newsletter form input::-moz-placeholder, .newsletter form .form select::-moz-placeholder, .form .newsletter form select::-moz-placeholder, .newsletter form .form textarea::-moz-placeholder, .form .newsletter form textarea::-moz-placeholder {
+  font-size: 1.5rem;
+  color: rgba(0, 0, 0, 0.6117647059);
+}
+.newsletter form input:-ms-input-placeholder, .newsletter form .form select:-ms-input-placeholder, .form .newsletter form select:-ms-input-placeholder, .newsletter form .form textarea:-ms-input-placeholder, .form .newsletter form textarea:-ms-input-placeholder {
+  font-size: 1.5rem;
+  color: rgba(0, 0, 0, 0.6117647059);
+}
+.newsletter form input::placeholder, .newsletter form .form select::placeholder, .form .newsletter form select::placeholder, .newsletter form .form textarea::placeholder, .form .newsletter form textarea::placeholder {
+  font-size: 1.5rem;
+  color: rgba(0, 0, 0, 0.6117647059);
+}
+.newsletter form button {
+  color: rgba(0, 0, 0, 0.6117647059);
+  background-color: #fff;
+  border: none;
+  border-radius: 10px;
+  margin-top: 2rem;
+  font-size: 1.5rem;
+  width: 120px;
+  font-weight: 700;
 }
 
 .newsletter__title {
   font-size: 20px;
   color: #ffffff;
+  margin-bottom: 2rem;
 }
 
 .footer {
@@ -635,6 +682,12 @@ p {
   .news .card:hover .card-footer {
     background-color: white;
   }
+  .newsletter form button:hover {
+    outline: white 2px solid;
+    color: #fff;
+    font-size: 1.8rem;
+    background-color: #f55000;
+  }
   .branch {
     display: flex;
     flex-direction: row;
@@ -653,11 +706,11 @@ p {
   }
   .carrusel .button--orange {
     box-shadow: 1px 2px 5px black;
-    height: 15px;
-    width: 15px;
-    border: #000000 1px solid;
+    height: 12px;
+    width: 12px;
+    border: 1px solid #fff;
     border-radius: 50%;
-    background-color: #F55000;
+    background-color: rgba(245, 82, 0, 0.8078431373);
   }
   .carrusel--height {
     height: auto;
