--- a/scss/_breakpoints.scss
+++ b/scss/_breakpoints.scss
@@ -104,6 +104,21 @@
         }
     }
 
+    //newsletter
+
+    .newsletter {
+        form {
+            button {
+                &:hover {
+                    outline: white 2px solid;
+                    color: #fff;
+                    font-size: 1.8rem;
+                    background-color: #f55000;
+                }
+            }
+        }
+    }
+
     // Contacto
 
     .branch {
@@ -124,11 +139,11 @@
 
         .button--orange {
             box-shadow: 1px 2px 5px black;
-            height: 15px;
-            width: 15px;
-            border: map-get($map: $paleta, $key: 'black') 1px solid;
+            height: 12px;
+            width: 12px;
+            border: 1px solid #fff;
             border-radius: 50%;
-            background-color: map-get($map: $paleta, $key: 'uno');
+            background-color: #f55200ce;
         }
     }
 
